ingress.yml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
  name: shweta2ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  rules: 
  - http: 
      paths: 
      - path: /tomcattesting 
        backend: 
          serviceName: shweta2
          servicePort: 8080
